...
                    ResultRowView(configuration: .init(title: "Risposte non date", titleColor: .yellow, systemImage: "questionmark.circle.fill", answers: viewModel.nonGivenAnswers, points: nonGivenPoints))
                    Spacer()
                }
                .foregroundColor(Color(uiColor: UIColor.secondarySystemBackground))
                .padding()
            }
            .navigationTitle("Punteggi")
            .toolbar {
                Button {
                    isShowingSheet.toggle()
                } label: {
                    Text("Fine")
                        .bold()
                }
                .accessibilityAddTraits([.isButton])
                .accessibilityIdentifier("closeButton")
            }
        }
    }
}

struct SmallStatView: View {
...
